add create accommodation endpoint
